--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "extra": "babel-node extra"
+    "extra": "babel-node extra",
+    "start": "npm run nodemon"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,12 @@
     "url": "https://github.com/Sumitsuccessivetech/javascript-server/issues"
   },
   "homepage": "https://github.com/Sumitsuccessivetech/javascript-server#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@types/express": "^4.17.8",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "tsconfig.json": "^1.0.7"
+  },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.1",
