--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "extra": "babel-node extra"
+    "extra": "babel-node extra",
+    "start:extraTs": "tsc-watch --project . --onSuccess \"npm run nodemon\"",
+    "nodemon": "nodemon ./dist/index.js",
+    "lint": "./node_modules/tslint/bin/tslint -c tslint.json -p tsconfig.json --exclude 'node_modules/**/*.{j,t}s'",
+    "lint:fix": "npm run lint --fix"
   },
   "repository": {
     "type": "git",
@@ -17,10 +21,16 @@
     "url": "https://github.com/Sumitsuccessivetech/javascript-server/issues"
   },
   "homepage": "https://github.com/Sumitsuccessivetech/javascript-server#readme",
-  "dependencies": {},
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.1",
-    "@babel/preset-env": "^7.12.1"
+    "@babel/preset-env": "^7.12.1",
+    "@types/node": "^14.14.3",
+    "tsc-watch": "^4.2.9",
+    "typescript": "^4.0.3",
+    "tst": "^6.1.1"
+  },
+  "devDependencies": {
+    
   }
 }
