--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "extra": "babel-node extra",
-    "start": "npm run nodemon"
+    "start": "tsc-watch --project . --onSuccess \"npm run nodemon\"",
+    "nodemon": "nodemon ./dist/index.js",
+    "lint": "./node_modules/tslint/bin/tslint -c tslint.json -p tsconfig.json --exclude 'node_modules/**/*.{j,t}s'",
+    "lint:fix": "npm run lint --fix"
   },
   "repository": {
     "type": "git",
@@ -20,9 +23,13 @@
   "homepage": "https://github.com/Sumitsuccessivetech/javascript-server#readme",
   "dependencies": {
     "@types/express": "^4.17.8",
+    "@types/node": "^14.14.3",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "tsconfig.json": "^1.0.7"
+    "nodemon": "^2.0.6",
+    "tsc-watch": "^4.2.9",
+    "tst": "^6.1.1",
+    "typescript": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
