--- a/package.json
+++ b/package.json
@@ -26,11 +26,11 @@
     "@babel/node": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "@types/node": "^14.14.3",
+    "husky": "^4.3.0",
     "tsc-watch": "^4.2.9",
-    "typescript": "^4.0.3",
-    "tst": "^6.1.1"
+    "tslint": "^6.1.3",
+    "tst": "^6.1.1",
+    "typescript": "^4.0.5"
   },
-  "devDependencies": {
-    
-  }
+  "devDependencies": {}
 }
