--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "extra": "babel-node extra",
     "start:extraTs": "tsc-watch --project . --onSuccess \"npm run nodemon\"",
+    "start": "tsc-watch --project . --onSuccess \"npm run nodemon\"",
     "nodemon": "nodemon ./dist/index.js",
     "lint": "./node_modules/tslint/bin/tslint -c tslint.json -p tsconfig.json --exclude 'node_modules/**/*.{j,t}s'",
-    "lint:fix": "npm run lint --fix"
+    "lint:fix": "npm run lint -- --fix"
   },
   "repository": {
     "type": "git",
@@ -23,15 +24,26 @@
   "homepage": "https://github.com/Sumitsuccessivetech/javascript-server#readme",
   "dependencies": {
     "@types/node": "^14.14.3",
-    "husky": "^4.3.0",
-    "tsc-watch": "^4.2.9",
-    "tslint": "^6.1.3",
-    "tst": "^6.1.1",
-    "typescript": "^4.0.5"
+    "tst": "^6.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.1",
-    "@babel/preset-env": "^7.12.1"
+    "@babel/preset-env": "^7.12.1",
+    "commitizen": "^4.2.2",
+    "eslint": "^7.12.1",
+    "husky": "^4.3.0",
+    "nodemon": "^2.0.6",
+    "test": "^0.6.0",
+    "tsc-watch": "^4.2.9",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm test",
+      "pre-push": "npm test",
+      "...": "..."
+    }
   }
 }
