--- a/package.json
+++ b/package.json
@@ -23,18 +23,15 @@
   },
   "homepage": "https://github.com/Sumitsuccessivetech/javascript-server#readme",
   "dependencies": {
-    "@types/node": "^14.14.3",
-    "tst": "^6.1.1"
+    "@types/node": "^14.14.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
     "commitizen": "^4.2.2",
-    "eslint": "^7.12.1",
     "husky": "^4.3.0",
     "nodemon": "^2.0.6",
-    "test": "^0.6.0",
     "tsc-watch": "^4.2.9",
     "tslint": "^6.1.3",
     "typescript": "^4.0.5"
@@ -42,8 +39,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "npm test",
-      "pre-push": "npm test",
-      "...": "..."
+      "pre-push": "npm test"
     }
   }
 }
