--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm test",
-      "pre-push": "npm test"
+      "pre-commit": "npm lint",
+      "pre-push": "npm lint"
     }
   }
 }
