--- a/package.json
+++ b/package.json
@@ -30,9 +30,17 @@
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
-    "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "commitizen": "^4.2.2",
+    "husky": "^4.3.0",
     "nodemon": "^2.0.6",
-    "tsc-watch": "^4.2.9"
+    "tsc-watch": "^4.2.9",
+    "tslint": "^6.1.3",
+    "typescript": "^4.0.5"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm lint",
+      "pre-push": "npm lint"
+    }
   }
 }
