--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
   "homepage": "https://github.com/Sumitsuccessivetech/javascript-server#readme",
   "dependencies": {
     "@types/express": "^4.17.8",
-    "@types/node": "^14.14.3",
-    "typescript": "^4.0.3"
+    "@types/node": "^14.14.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
