--- a/package.json
+++ b/package.json
@@ -23,14 +23,18 @@
   "homepage": "https://github.com/Sumitsuccessivetech/javascript-server#readme",
   "dependencies": {
     "@types/express": "^4.17.8",
-    "@types/node": "^14.14.3"
+    "@types/node": "^14.14.3",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/node": "^7.12.1",
     "@babel/preset-env": "^7.12.1",
+    "@types/mongoose": "^5.7.37",
     "commitizen": "^4.2.2",
+    "dotenv": "^8.2.0",
     "husky": "^4.3.0",
+    "jsonwebtoken": "^8.5.1",
     "nodemon": "^2.0.6",
     "tsc-watch": "^4.2.9",
     "tslint": "^6.1.3",
