--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ PORT=9000
 NODE_ENV=dev
 MONGO_URL=mongodb://localhost:27017/express-training
 PASSWORD=training@123 
-secretKey='qwertyuiopasdfghjklzxcvbnm123456'
+SECRETKEY='qwertyuiopasdfghjklzxcvbnm123456'
