--- a/package.json
+++ b/package.json
@@ -25,10 +25,11 @@
     "@types/express": "^4.17.8",
     "@types/node": "^14.14.3",
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.10.16",
+    "mongoose": "5.10.16",
     "query-string": "^6.13.8"
   },
   "devDependencies": {
