--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "@types/express": "^4.17.8",
     "@types/node": "^14.14.3",
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "5.10.16",
-    "query-string": "^6.13.8"
+    "query-string": "^6.13.8",
+    "swagger-jsdoc": "^6.0.2",
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
