--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "javascript-server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./dist/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "extra": "babel-node extra",
